# JobQst

./: .ai_code_quality  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ANALYSIS_DISCREPANCIES.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS.md  COMPLETE_SYSTEM_ANALYSIS.md  CORE_WORKING_LOGIC.md  CPU_VS_GPU_BENCHMARK_ANALYSIS.md  CURRENT_STATUS_SUMMARY.md  DASHBOARD_COMPLETE_GUIDE.md  DASHBOARD_DOCUMENTATION.md  DASHBOARD_GUIDE.md  DASHBOARD_QUICK_REFERENCE.md  DASHBOARD_README.md  DASHBOARD_READY.md  DASHBOARD_UI_UNIFICATION_COMPLETE.md  DISCLAIMER.md  DOCUMENTATION_SUMMARY.md  Dockerfile  ELUTA_SCRAPER_USAGE.md  ELUTA_SCRAPING_REPORT.md  EXPLANATION_GUIDE.md  FINAL_CLEANUP_SUMMARY.md  FUNCTIONS_OVERVIEW.md  FUNCTION_REGISTRY.md  HEALTH_CHECK_AND_PROFILE_GUIDE.md  HYBRID_PROCESSING_PLAN.md  INTEGRATION_REPORT.md  ISSUE_TRACKER.md  JOBLAND_MODERNIZATION_BLUEPRINT.md  LICENSE  NO_AI_PROCESSOR_TEST_RESULTS.md  Nirajan  Nirajan Khadka  (+141 more)
.github/: TESTING_PRINCIPLES.md  architect.chatmode.md  ask.chatmode.md  code.chatmode.md  copilot-instructions.md  debug.chatmode.md
.github/chatmodes/: 4.1 super charged.chatmode.md  Beast mode 4.1.chatmode.md
.github/instructions/: memory.instruction.md
.github/workflows/: ci.yml  pre-commit.yml  security.yml
.kiro/settings/: ai_service_config.json  job_processor_config.json  mcp.json
.kiro/steering/: product.md  structure.md  tech.md
archive/: README.md
archive/fixes/: comprehensive_job_processor_fix.py  fixed_comprehensive_processor.py  fixed_eluta_scraper.py
archive/old_documentation_july2025/: COMPREHENSIVE_REFACTORING_PLAN.md  DOCUMENTATION_INDEX.md  MICROSERVICE_REMOVAL_SUCCESS_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  TEST_COMPLIANCE_REPORT.md  TEST_FRAMEWORK_GUIDE.md  TEST_INITIATIVE_SUMMARY.md  TEST_SUITE_REPAIR_SUMMARY.md
archive/processors/: openhermes_job_processor.py  reliable_job_processor.py  setup_openhermes_job_processor.py
archive/scrapers/: robust_eluta_scraper.py  simple_test_scraper.py
archive/tests/: test_all_jobs_with_logging.py  test_all_scrapers.py  test_company_extraction.py  test_document_generator_demo.py  test_eluta_scraping.py  test_eluta_selectors.py  (+16 more)
ats/: __init__.py  bamboohr.py  base_submitter.py  fallback_submitters.py  greenhouse.py  icims.py  lever.py  workday.py
autojobagent/: README.md  __init__.py  __main__.py
config/: extraction_patterns.json  health_config.json  job_matching_config.json  optimization_config.json  optimized_pipeline_config.json  orchestrator_config.json  resume_parsing_config.json  salary_config.json  skills_database.json  validation_config.json
data/: dashboard_settings.json  jobs.db  jobs.db-shm  jobs.db-wal  real_scraping_test_report_1750043496.json  real_scraping_test_report_1750043565.json  schedules.json  stress_test_report_1750389153.json
debug/: eluta_page.html  get_eluta_html.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONFIG_DRIVEN_ARCHITECTURE.md  DASHBOARD_IMPLEMENTATION_PLAN.md  DASH_DASHBOARD_PLAN.md  DEVELOPER_GUIDE.md  DEVELOPMENT_STANDARDS.md  ENHANCED_CLICK_POPUP_GUIDE.md  ENHANCED_JOB_MANAGEMENT.md  README.md  RESUME_PARSER_V2_GUIDE.md  SYSTEM_OVERVIEW.md  TEST_SUITE_RESULTS.md  TROUBLESHOOTING.md  VERSION_ANALYSIS_v2.0.md  VSCODE_TERMINAL_CONFIGURATION.md
fixes/: dashboard_emergency_fixes.py
health_logs/: health_20250624.json
logs/: gemini_api_call_log.json  health_20250713.json
memory-bank/: activeContext.md  decisionLog.md  progress.md
output/: ipc.json
requirements/: requirements-dev.txt  requirements.txt
scrapers/: __init__.py  anti_bot_scraper.py  base_scraper.py  eluta_enhanced.py  eluta_multi_browser.py  eluta_multi_ip.py  eluta_optimized_parallel.py  eluta_working.py  fallback_scrapers.py  human_behavior.py  indeed_enhanced.py  job_filters.py  jobbank_enhanced.py  jobbank_scraper.py  kijiji_scraper.py  linkedin_enhanced.py  linkedin_scraper.py  monster_enhanced.py  monster_scraper.py  multi_site_scraper.py  parallel_job_scraper.py  session_manager.py  workday_scraper.py  workopolis_scraper.py
scripts/: README.md  apply_quick_fixes.py  check_job_urls.py  cleanup_project.py  comprehensive_cleanup.py  deployment_manager.py  file_size_audit.ps1  final_cleanup_tasks.py  fix_ssl_cert.py  manage_skills.py  playwright_eluta_scraper.py  production_health_check.ps1  quick_optimize.py  register_daily_scrape_task.ps1  run_job_pipeline.ps1  run_tests.py  setup_ollama.py  simple_test.ps1  start_dev_environment.ps1  test_all_tools.ps1  unregister_daily_scrape_task.ps1  update_arch_doc.py  update_docs.py
src/: README.md  __init__.py  app.py  apply_jobs.py  ats_field_templates.py  autonomous_processor.py  clean_database.py  enhanced_job_analyzer.py  gemini_optimizer.py  gemini_resume_generator.py  generate_training_data.py  inspect_db.py  launch_unified_dashboard.py  main_modular.py  monster_ca_integration.py  reset_jobs.py  run_gemini_generator.py  setup_neural_network.py  ssl_fix.py  test_pipeline.py  validate_documents.py  verify_docs_update.py  verify_neural_network.py
temp/: test_conversion.docx
templates/: index.html
test_data/: jobs.jobvite.com_careers_essencemediacom-na_job_okLjvfwD___jvst=Job%20Board___jvsd=LinkedIn.html  jobs.jobvite.com_careers_essencemediacom-na_job_okLjvfwD___jvst=Job%20Board___jvsd=LinkedIn_url.txt  www.eluta.ca_jobs-at-rbc_software-developer-toronto-on.html  www.eluta.ca_jobs-at-rbc_software-developer-toronto-on_url.txt  www.eluta.ca_jobs-at-td-bank_data-analyst-toronto-on.html  www.eluta.ca_jobs-at-td-bank_data-analyst-toronto-on_url.txt
tests/: README.md  conftest.py  run_new_tests.py  scraper_job_limit_test.py  test_basic.py  test_click_popup_framework.py  test_comprehensive_scraping.py  test_comprehensive_scraping.py.backup.20250623_185309  test_dashboard_connection.py  test_eluta_scraper.py  test_helpers.py  test_integration.py  test_integration.py.backup.20250623_185309  test_job_filters.py  test_real_database_jobs.py  test_session_manager.py  test_session_manager.py.backup.20250623_185309  test_unified_eluta_scraper.py
(+934 files in other folders)
