[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autojobagent"
version = "1.0.0"
authors = [
    { name = "Nirajan Khadka", email = "Nirajan.Tech@gmail.com" },
]
description = "Advanced job application automation system with AI-powered matching"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "playwright>=1.42.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.0.10",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "jinja2>=3.1.2",
    "pydantic>=1.10.7",
    "ollama>=0.1.0",
    "rich>=13.3.5",
    "watchfiles>=0.19.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0",
]

[project.scripts]
autojobagent = "autojobagent.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autojobagent*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[project.urls]
"Homepage" = "https://github.com/NirajanKhadka/automate_job_idea001"
"Bug Tracker" = "https://github.com/NirajanKhadka/automate_job_idea001/issues"
